--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -6,4 +6,4 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/bsukramlitt/apps-spring-cloud-services-labs.git
+          uri: file:///C:/development/git/apps-spring-cloud-services-labs
